# portfoliomind

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
screenshots/: execute_trades_dry_run.txt
scripts/: _smoke_cli_once.py  _smoke_daemon.py  _smoke_once.py  approve_trades.py  backtest.py  bootstrap_sheet.py  demo_news.py  demo_signals.py  dry_run.py  execute_trades.py  register_cron.sh  run_agent.py  run_scheduler.py  run_validator.py  scrape_investingpro.py
src/portfoliomind/: __init__.py  config.py  logging_setup.py  paths.py  strategy_runner.py  time_utils.py  universe.py  validation.py
src/portfoliomind/agent/: __init__.py  prompt.py  skills.py  validator.py
src/portfoliomind/approval/: __init__.py  discord.py  persist.py
tests/: __init__.py  conftest.py  test_agent_skills.py  test_agent_validator.py  test_approval.py  test_approval_discord.py  test_approval_persist.py  test_backtest.py  test_bootstrap_idempotent.py  test_config.py  test_execute_trades_cli.py  test_investingpro_deepdive.py  test_investingpro_login.py  test_investingpro_parse.py  test_investingpro_runner.py  test_investingpro_scrape.py  test_news_match.py  test_news_sentiment_parsing.py  test_order_validation.py  test_scheduler_logic.py  test_scheduler_loop.py  test_schema.py  test_signals_cache.py  test_signals_combined.py  test_signals_combiner.py  test_signals_commissions.py  test_signals_patterns.py  test_signals_sizer.py  test_signals_technical.py  test_signals_technicals.py  test_strategy_runner.py  test_validation.py  test_xtb_runner.py
(+37 files in other folders)
