[project]
name = "portfoliomind"
version = "0.1.0"
description = "PortfolioMind v4 — multi-strategy equity investing agent (InvestingPro + XTB + Google Sheets)"
authors = [
    { name = "Mauricio Obando" },
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    "playwright>=1.49.0",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.35.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.3",
    "ta>=0.11.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
]

[project.scripts]
# CLI scripts live under scripts/ at the project root and are invoked via
# `uv run python scripts/<name>.py` (per the foundation card spec).
# We do not register console_scripts here so the package layout is clean.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfoliomind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
